<resources>
    <string name="app_name">S. R. Citas</string>
    <string name="label_login">Inicio de Sesion</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Clave</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_register">¿Aun no te has registrado?</string>
    <string name="label_register">Registro</string>
    <string name="label_name">Nombre Completo</string>
    <string name="btn_register">Confirmar registro</string>
    <string name="label_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="btn_create_appointment">Reservar cita</string>
    <string name="btn_my_appointments">Mis citas</string>
    <string name="btn_logout">Cerrar sesion</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar cita</string>
    <string name="label_description">Descripcion</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operacion</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Medico</string>
    <string name="label_scheduled_date">Fecha para la cita</string>
    <string name="btn_confirm">Confirmar</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id">Cita medica #%1$d</string>
    <string name="item_appointment_date">Atencion el dia %1$s</string>
    <string name="item_appointment_time">A las %1$s</string>
    <string name="item_appointment_created_at">Esta cita se registro el dia %1$s con la siguiente Descripcion:</string>
    <string name="my_appointments">Mis citas Medicas</string>
    <string name="validate_appointment_description">La descripcion es demasiado corta</string>
    <string name="validate_appointment_date">Es necesario seleccionar una fecha</string>
    <string name="validate_appointment_time">Es necesario definir una hora para la cita</string>
    <string name="press_back_again">Presione una vez mas para salir</string>
    <string name="dialog_create_appointment_exit_title">¿Estas seguro que deseas salir?</string>
    <string name="dialog_create_appointment_exit_message">Si abandonas el registro, los datos que habias ingresado se perderan.</string>
    <string name="dialog_create_appointment_exit_positive_btn">Si, salir</string>
    <string name="dialog_create_appointment_exit_negative_btn">Continuar registro</string>
    <string name="label_scheduled_time">Hora de la cita</string>
    <string name="label_confirm_appointment_data">Datos de la cita</string>
    <string name="error_loading_specialties">Ocurrio un problema al cargar las especialidades</string>
    <string name="error_loading_doctors">Ocurrio un problema al cargar los medicos</string>
    <string name="hint_description_create_appointment">Breve comentario para la cita</string>
    <string name="error_loading_hours">No se han podido cargar las horas.</string>
    <string name="label_select_doctor_and_date">Seleccione un medico y una fecha, para ver sus horas disponibles</string>
    <string name="no_available_hours">No se encontraron horas disponibles para el medico en el dia seleccionado</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="error_empty_credentials">Por favor ingrese correo y contraseña</string>
    <string name="welcome_name">Bienvenido %1$s</string>
    <string name="create_appointment_success">Cita registrada correctamente</string>
    <string name="create_appointment_error">Ocurrio un error inesperado registrando la cita medica.</string>
    <string name="label_password_confirmation">Confirmar Clave</string>
    <string name="error_register_empty_fields">Por favor completar todos los datos</string>
    <string name="error_register_passwords_do_not_match">Las contraseñas no coinciden</string>
    <string name="error_register_validarion">Ocurrio un error en el registro</string>

    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="error_logout_session">Ocurrio un error al cerrar sesion.</string>

    <string name="btn_edit_profile">Editar perfil</string>
    <string name="label_edit_profile">Editar datos básicos</string>
    <string name="label_phone">Número de teléfono</string>
    <string name="label_address">Dirección</string>
    <string name="btn_save">Guardar cambios</string>
    <string name="profile_success_message">Los cambios se han guardado correctamente</string>
    <string name="error_profile_name">El nombre ingresado es demasiado corto</string>
    <string name="you_need_a_phone">Es necesario asociar primero un teléfono a tu cuenta</string>
</resources>